<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.cubedguelor.midtermapp.SubmitQuiz"
    tools:showIn="@layout/activity_submit_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/exam_instruction"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
        <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/givenName"/>

        <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastNameTemp"/>
        <EditText
        android:id="@+id/student_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stuID"/>
        <Button
        android:id="@+id/confirm_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tittle_activity_fill_name" />
    </LinearLayout>

</LinearLayout>

